Feature/integration tests for registration (#234)
Add integration tests for Registration System.

* Refactor: Move TestIbanProvider to testutils package

* Add 'id' field initialization in TestAccountBuilder

* Remove unused import from AccountQueryServiceTest

* Refactor test account creation logic in AccountQueryServiceTest

* Refactor test constants in AccountQueryServiceTest.

* Add Javadoc to RegistrationService interface

* Refactor TestAccountBuilder to use TestIbanProvider

* Log exception details when welcome email fails to send